--- a/src/prism/less/zz_prism.less
+++ b/src/prism/less/zz_prism.less
@@ -232,7 +232,7 @@ pre.code-toolbar > .toolbar {
 	// right: .2em;
 	top: 20px;
 	right: 20px;
-	transition: opacity 0.3s ease-in-out;
+	// transition: opacity 0.3s ease-in-out;
 	opacity: 0;
 }
 
