--- a/src/shower/less/shower_4_slide.less
+++ b/src/shower/less/shower_4_slide.less
@@ -187,7 +187,11 @@
     li {}
 
     pre,
-    code {}
+    code {
+        &[class*="language-"] {
+            font-size: 16px;
+        }
+    }
     pre {}
     code {}
 
